# mail-server

./: Cargo.toml
crates/common/: Cargo.toml
crates/directory/: Cargo.toml
